2010-02-22  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/42749
	* tree-tailcall.c (adjust_return_value_with_ops): Drop update
	parameter.  Do arithmetic in the original type.
	(update_accumulator_with_ops): Likewise.
	(adjust_accumulator_values): Adjust.

	* gcc.c-torture/compile/pr42749.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156960 138bc75d-0d04-0410-961f-82ee72b054a4